// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HomeView > BceID User 1`] = `
"<div>
  <div class=\\"v-container v-locale--is-ltr\\">
    <div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated\\">
      <!---->
      <div class=\\"v-card__loader\\">
        <div class=\\"v-progress-linear v-theme--light v-locale--is-ltr\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
          <!---->
          <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
          <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
            <div class=\\"v-progress-linear__indeterminate\\">
              <div class=\\"v-progress-linear__indeterminate long\\"></div>
              <div class=\\"v-progress-linear__indeterminate short\\"></div>
            </div>
          </transition-stub>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <div class=\\"v-card-title\\">Provider User</div>
      <div class=\\"v-card-text\\">
        <div class=\\"v-list v-theme--light v-list--density-default v-list--one-line\\" tabindex=\\"0\\" role=\\"listbox\\">
          <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text\\">
            <!----><span class=\\"v-list-item__underlay\\"></span>
            <!---->
            <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
              <!---->
              <!---->
              <div class=\\"v-list-item-title\\">Business BCeID:</div>
              <div class=\\"v-list-item-subtitle\\">ofmqa01</div>
            </div>
            <!---->
          </div>
          <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text\\">
            <!----><span class=\\"v-list-item__underlay\\"></span>
            <!---->
            <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
              <!---->
              <!---->
              <div class=\\"v-list-item-title\\">GUID:</div>
              <div class=\\"v-list-item-subtitle\\"></div>
            </div>
            <!---->
          </div>
          <!--v-if-->
          <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text\\">
            <!----><span class=\\"v-list-item__underlay\\"></span>
            <!---->
            <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
              <!---->
              <!---->
              <div class=\\"v-list-item-title\\">Name:</div>
              <div class=\\"v-list-item-subtitle\\"> </div>
            </div>
            <!---->
          </div>
          <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text\\">
            <!----><span class=\\"v-list-item__underlay\\"></span>
            <!---->
            <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
              <!---->
              <!---->
              <div class=\\"v-list-item-title\\">Email:</div>
              <div class=\\"v-list-item-subtitle\\"></div>
            </div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!----><span class=\\"v-card__underlay\\"></span>
    </div>
  </div>
  <div class=\\"v-container v-locale--is-ltr\\">
    <div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated\\">
      <!---->
      <div class=\\"v-card__loader\\">
        <div class=\\"v-progress-linear v-theme--light v-locale--is-ltr\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
          <!---->
          <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
          <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
            <div class=\\"v-progress-linear__indeterminate\\">
              <div class=\\"v-progress-linear__indeterminate long\\"></div>
              <div class=\\"v-progress-linear__indeterminate short\\"></div>
            </div>
          </transition-stub>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <div class=\\"v-card-title\\">Roles</div>
      <div class=\\"v-card-text\\">
        <div class=\\"v-list v-theme--light v-list--density-default v-list--one-line\\" tabindex=\\"0\\" role=\\"listbox\\">
          <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text\\">
            <!----><span class=\\"v-list-item__underlay\\"></span>
            <!---->
            <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
              <!---->
              <!---->
              <div class=\\"v-list-item-subtitle\\"> (WIP: will convert #s to descriptions)</div>
            </div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!----><span class=\\"v-card__underlay\\"></span>
    </div>
  </div>
  <div class=\\"v-container v-locale--is-ltr\\">
    <div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated\\">
      <!---->
      <div class=\\"v-card__loader\\">
        <div class=\\"v-progress-linear v-theme--light v-locale--is-ltr\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
          <!---->
          <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
          <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
            <div class=\\"v-progress-linear__indeterminate\\">
              <div class=\\"v-progress-linear__indeterminate long\\"></div>
              <div class=\\"v-progress-linear__indeterminate short\\"></div>
            </div>
          </transition-stub>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <div class=\\"v-card-title\\">Organization</div>
      <div class=\\"v-card-text\\">
        <div class=\\"v-list v-theme--light v-list--density-default v-list--one-line\\" tabindex=\\"0\\" role=\\"listbox\\">
          <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text\\">
            <!----><span class=\\"v-list-item__underlay\\"></span>
            <!---->
            <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
              <!---->
              <!---->
              <div class=\\"v-list-item-title\\">ID:</div>
              <div class=\\"v-list-item-subtitle\\"></div>
            </div>
            <!---->
          </div>
          <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text\\">
            <!----><span class=\\"v-list-item__underlay\\"></span>
            <!---->
            <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
              <!---->
              <!---->
              <div class=\\"v-list-item-title\\">Account Number:</div>
              <div class=\\"v-list-item-subtitle\\"></div>
            </div>
            <!---->
          </div>
          <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text\\">
            <!----><span class=\\"v-list-item__underlay\\"></span>
            <!---->
            <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
              <!---->
              <!---->
              <div class=\\"v-list-item-title\\">Name:</div>
              <div class=\\"v-list-item-subtitle\\"></div>
            </div>
            <!---->
          </div>
          <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text\\">
            <!----><span class=\\"v-list-item__underlay\\"></span>
            <!---->
            <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
              <!---->
              <!---->
              <div class=\\"v-list-item-title\\">Type:</div>
              <div class=\\"v-list-item-subtitle\\"> (WIP: will convert # to description)</div>
            </div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!----><span class=\\"v-card__underlay\\"></span>
    </div>
  </div>
  <div class=\\"v-container v-locale--is-ltr\\">
    <div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated\\">
      <!---->
      <div class=\\"v-card__loader\\">
        <div class=\\"v-progress-linear v-theme--light v-locale--is-ltr\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
          <!---->
          <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
          <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
            <div class=\\"v-progress-linear__indeterminate\\">
              <div class=\\"v-progress-linear__indeterminate long\\"></div>
              <div class=\\"v-progress-linear__indeterminate short\\"></div>
            </div>
          </transition-stub>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <div class=\\"v-card-title\\">Current Facility</div>
      <div class=\\"v-card-text\\"> Facility Name: <br><span style=\\"opacity: 0.6;\\"></span></div>
      <!---->
      <!----><span class=\\"v-card__underlay\\"></span>
    </div>
  </div>
</div>"
`;

exports[`HomeView > IDIR User 1`] = `
"<div>
  <div class=\\"v-container v-locale--is-ltr\\">
    <div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated\\">
      <!---->
      <div class=\\"v-card__loader\\">
        <div class=\\"v-progress-linear v-theme--light v-locale--is-ltr\\" style=\\"top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
          <!---->
          <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
          <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
            <div class=\\"v-progress-linear__indeterminate\\">
              <div class=\\"v-progress-linear__indeterminate long\\"></div>
              <div class=\\"v-progress-linear__indeterminate short\\"></div>
            </div>
          </transition-stub>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <div class=\\"v-card-title\\">Ministry User</div>
      <div class=\\"v-card-text\\">
        <div class=\\"v-list v-theme--light v-list--density-default v-list--one-line\\" tabindex=\\"0\\" role=\\"listbox\\">
          <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text\\">
            <!----><span class=\\"v-list-item__underlay\\"></span>
            <!---->
            <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
              <!---->
              <!---->
              <div class=\\"v-list-item-title\\">IDIR:</div>
              <div class=\\"v-list-item-subtitle\\">idiruser</div>
            </div>
            <!---->
          </div>
          <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text\\">
            <!----><span class=\\"v-list-item__underlay\\"></span>
            <!---->
            <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
              <!---->
              <!---->
              <div class=\\"v-list-item-title\\">GUID:</div>
              <div class=\\"v-list-item-subtitle\\"></div>
            </div>
            <!---->
          </div>
          <!--v-if-->
          <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text\\">
            <!----><span class=\\"v-list-item__underlay\\"></span>
            <!---->
            <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
              <!---->
              <!---->
              <div class=\\"v-list-item-title\\">Name:</div>
              <div class=\\"v-list-item-subtitle\\"> </div>
            </div>
            <!---->
          </div>
          <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text\\">
            <!----><span class=\\"v-list-item__underlay\\"></span>
            <!---->
            <div class=\\"v-list-item__content\\" data-no-activator=\\"\\">
              <!---->
              <!---->
              <div class=\\"v-list-item-title\\">Email:</div>
              <div class=\\"v-list-item-subtitle\\"></div>
            </div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!----><span class=\\"v-card__underlay\\"></span>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;
